[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"                                     # 错误处理
clap = "4.5.4"                                        # 命令行解析
colored = "2.1.0"                                     # 命令终端彩色显示
jsonxf = "1.1.1"                                      # JSON 格式化
mime = "0.3.17"                                       # 处理 mime 类型
reqwest = { version = "0.12.3", features = ["json"] } # http 客户端
tokio = { version = "1.37.0", features = ["full"] }   # 异步处理
